--- a/features/fixtures/cucumber_tags/granules_search_validation_html.yml
+++ b/features/fixtures/cucumber_tags/granules_search_validation_html.yml
@@ -611,7 +611,7 @@ http_interactions:
   recorded_at: Sun, 01 Mar 2015 02:51:37 GMT
 - request:
     method: get
-    uri: https://cmr.earthdata.nasa.gov/search/collections.atom?page_num=1&page_size=10
+    uri: https://cmr.earthdata.nasa.gov/search/collections.atom?include_has_granules=true&include_tags=org.ceos.wgiss.cwic.*,opensearch.granule.osdd,org.geoss.geoss_data-core,gov.nasa.eosdis,int.esa.fedeo&page_num=1&page_size=10
     body:
       encoding: US-ASCII
       string: ''
